# rtsp_opencv

./: CMakeLists.txt  README.md  rtsp_buffer_viewer.cpp  rtsp_viewer.cpp
